# AriesAutomationTools

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
.github/workflows/: ci.yml  release.yml
assets/: config.json  resources.rc
scripts/: set_version.py
src/: icon_data.hpp  main.cpp  single_instance.hpp  single_instance_unix.cpp  single_instance_win.cpp  version.h
src/config/: config_manager.cpp  config_manager.hpp
src/core/: engine.cpp  engine.hpp  record_engine.cpp  record_engine.hpp  scheduler.cpp  scheduler.hpp  trigger_manager.cpp  trigger_manager.hpp  workflow.hpp
src/hotkey/: hotkey_manager.hpp
src/hotkey/linux/: linux_hotkey.cpp
src/hotkey/macos/: macos_hotkey.cpp
src/hotkey/windows/: win_hotkey.cpp
src/input/: input_simulator.hpp  key_map.cpp  key_map.hpp
src/input/linux/: linux_input.cpp
src/input/macos/: macos_input.cpp
src/input/windows/: win_input.cpp
src/monitor/: activity_monitor.hpp
src/monitor/linux/: linux_monitor.cpp
src/monitor/macos/: macos_monitor.cpp
src/monitor/windows/: win_monitor.cpp
src/ui/: app_ui.cpp  app_ui.hpp  tray_manager.hpp  tray_manager_stub.cpp  tray_manager_win.cpp
src/ui/widgets/: activity_editor.cpp  activity_editor.hpp  record_overlay.cpp  record_overlay.hpp  window_picker.cpp  window_picker.hpp  workflow_list.cpp  workflow_list.hpp
src/window/: pixel_checker.hpp  window_finder.hpp
src/window/linux/: linux_window.cpp
src/window/macos/: macos_window.cpp  macos_window.mm
src/window/windows/: win_window.cpp
tools/: gen_icon.py
